# zenlabs

./: .gitignore  README.md  package-lock.json  package.json
app/: .env.example  .gitignore  .npmrc  PRODUCTION_CHECKLIST.md  app.json  eas.json  jest.config.js  package-lock.json  package.json  tsconfig.json
app/__tests__/: setup.ts
app/android/: settings.gradle
app/android/app/: build.gradle
app/assets/sounds/: README.md
app/src/: App.tsx
app/src/components/: BreathCircle.tsx  BreathHeartSync.tsx  CoherenceMeter.tsx  DailyQuestCard.tsx  ErrorBoundary.tsx  GlowOrb.tsx  KernelMonitor.tsx  Leaderboard.tsx  LevelBadge.tsx  ParticleField.tsx  PatternPicker.tsx  PhaseText.tsx  SessionComplete.tsx  SettingsSheet.tsx  ShareCard.tsx  SkiaBreathOrb.tsx  Timer.tsx  UserProfile.tsx  VitalsDisplay.tsx  WearableSettings.tsx  index.ts
app/src/hooks/: index.ts  useAudio.ts  useCamera.ts  useZenOne.ts
app/src/i18n/: index.ts  translations.ts
app/src/screens/: AchievementsScreen.tsx  HistoryScreen.tsx  LoginScreen.tsx  OnboardingScreen.tsx  SessionScreen.tsx  SettingsScreen.tsx  index.ts
components/: ActiveSessionDisplay.tsx  ErrorBoundary.tsx  HolodeckOverlay.tsx  KernelMonitor.tsx  OrbBreathVizZenSciFi.tsx  Pandora 4 Core UI (1).md  ProgressArc.tsx
components/design-system/: Primitives.tsx
components/modals/: CameraPermissionModal.tsx  OnboardingModal.tsx  SummaryModal.tsx
components/sections/: Footer.tsx  Header.tsx  HistorySheet.tsx  SettingsSheet.tsx
rust-core/: Cargo.toml  build.rs  generate-bindings.sh  lib.rs
rust-core/src/: Cargo.toml  zenone.udl
(+52 files in other folders)
