[package]
name = "zenone-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]
name = "zenone"

[dependencies]
# AGOLOS core crates (path to local checkout)
zenb-core = { path = "../../AGOLOS/crates/zenb-core" }
zenb-signals = { path = "../../AGOLOS/crates/zenb-signals" }

# UniFFI for cross-platform bindings
uniffi = { version = "0.28", features = ["cli"] }

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }
